# medbook-inventory-order-workspace

./: .gitignore  Cargo.toml  docker-compose.yml
medbook-deliveryservice/: .env.example  Cargo.toml
medbook-deliveryservice/migrations/2025-10-17-085952-0000_init/: down.sql  up.sql
medbook-deliveryservice/migrations/2025-10-17-090840-0000_outbox/: down.sql
medbook-deliveryservice/src/: app_error.rs  db.rs  lib.rs  main.rs  models.rs  outbox.rs  schema.rs
medbook-events/: Cargo.toml
medbook-events/src/: lib.rs
medbook-inventoryservice/: .env.example  Cargo.toml  diesel.toml
medbook-inventoryservice/migrations/2025-09-26-091726-0000_init/: down.sql  up.sql
medbook-inventoryservice/migrations/2025-10-14-081107-0000_create-product-inventory-view/: down.sql  up.sql
medbook-inventoryservice/src/: app_error.rs  app_state.rs  lib.rs  main.rs  models.rs  outbox.rs  schema.rs  schema_custom.rs
medbook-inventoryservice/src/consumers/: inventory.rs  mod.rs
medbook-inventoryservice/src/routes/: inventory.rs  mod.rs  products.rs
medbook-ordersservice/: .env.example  Cargo.toml  diesel.toml
medbook-ordersservice/migrations/2025-09-26-105634-0000_init/: down.sql  up.sql
medbook-ordersservice/migrations/2025-10-14-085239-0000_outbox/: up.sql
medbook-ordersservice/src/: app_error.rs  lib.rs  main.rs  models.rs  schema.rs
medbook-ordersservice/src/consumers/: mod.rs  orders.rs
medbook-ordersservice/src/infrastructure/: mod.rs
medbook-ordersservice/src/infrastructure/jwt_authentication/: mod.rs
medbook-ordersservice/src/routes/: authtest.rs  mod.rs  orders.rs
medbook-paymentservice/: .env.example  Cargo.toml
medbook-paymentservice/src/: app_state.rs  main.rs  models.rs  schema.rs
(+11 files in other folders)
