[package]
name = "medbook-inventoryservice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.4"
diesel = "2.2.12"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
diesel-async = { version = "0.6.1", features = [
    "postgres",
    "tokio",
    "pool",
    "bb8",
] }
dotenvy = "0.15.7"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
rmq-wrappers = { git = "https://github.com/Pasobeso/rmq-wrappers.git" }
medbook-events = { path = "../medbook-events" }
lapin = "3.7.0"
futures-lite = "2.6.1"
futures = "0.3.31"
